Fix some form alignment issues

--- a/media/common/css/wp.css
+++ b/media/common/css/wp.css
@@ -81,3 +81,5 @@ li.expandable > span.sliders { color: black; display: inline; }
 }
 
 input.costvalue { top: 0px !important; }
+
+td.cost { vertical-align: top }
